<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="226dp"
            android:padding="24dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >

            <Button
                android:id="@+id/true_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:onClick="checkTrueAnswer"
                android:text="@string/true_button" />

            <Button
                android:id="@+id/false_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:onClick="checkFalseAnswer"
                android:text="@string/false_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="moveQuestionBack"
                android:text="@string/previous_button" />

            <Button
                android:id="@+id/next_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="moveQuestionNext"
                android:text="@string/next_button" />
        </LinearLayout>

        <Button
            android:id="@+id/cheat_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCheatButton"
            android:text="@string/cheat_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>